buildDeploy/deployment/19_pass_quake_all.yaml
---
--- # Route definition
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: red-quake
  name: hot-dog
  namespace: red
spec:
  host: "hotdog-red.gfstst.169.62.225.197.nip.io"
  port:
    targetPort: red-quake
  to:
    kind: Service
    name: red-quake
    weight: 100
  wildcardPolicy: None
---
--- # Service defs
---
apiVersion: v1
kind: Service
metadata:
  name: red-quake
  namespace: red
  labels:
    app: red-quake
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 4400
      protocol: TCP
      name: red-quake
  selector:
    app: red-quake
--- #
--- # Course :: Problem Diagnosis and Troubleshooting Lab 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-quake
  namespace: red
  labels:
    app: red-quake
spec:
  selector:
    matchLabels:
      app: red-quake
  replicas: 1
  template:
    metadata:
      labels:
        app: red-quake
    spec:
      containers:
      - name: red-quake
        image: ibmicpcoc/quake:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 4100
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
